[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-iranian-payment"
dynamic = ["version"]
description = "Iranian payment gateways integration for Django (Zarinpal, Zibal, IDPay, Pay.ir and more)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Morteza Farhadi", email = "mortexafarhadi@gmail.com" }]
keywords = ["django", "payment", "iran", "zarinpal", "zibal", "idpay", "gateway"]
dependencies = [
    "requests>=2.20",
    "Django>=3.2",
    "zeep>=4.3.2",
]
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = { attr = "django_iranian_payment.__version__" }

[project.optional-dependencies]
# درگاه‌های SOAP (ملت، سپه، پارسیان) به این نیاز دارند — جدا نگه داشته شده
soap = ["zeep>=4.0"]

[project.urls]
Homepage = "https://github.com/mortexafarhadi/django-iranian-payment"
Repository = "https://github.com/mortexafarhadi/django-iranian-payment"

[tool.setuptools.packages.find]
include = ["django_iranian_payment*"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=8.3.5",
    "pytest-django>=4.12.0",
]
