[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-iranian-payment"
dynamic = ["version"]
description = "Iranian payment gateways integration for Django (Zarinpal, Zibal, IDPay, Pay.ir and more)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Morteza Farhadi", email = "mortexafarhadi@gmail.com" }]
keywords = ["django", "payment", "iran", "zarinpal", "zibal", "idpay", "gateway"]
dependencies = [
    "requests>=2.20",
    "Django>=3.2",
]
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = { attr = "django_iranian_payment.__version__" }

[project.optional-dependencies]
# zeep فقط برای درگاه‌های SOAP (مثل ملت) لازم است؛ کاربری که این درگاه‌ها را
# نمی‌خواهد نباید مجبور به نصب آن باشد. نصب: pip install "django-iranian-payment[soap]"
soap = ["zeep>=4.3.2"]
# رمزنگاری AES+RSA فقط برای ایران‌کیش لازم است.
# نصب: pip install "django-iranian-payment[irankish]"
irankish = ["pycryptodome>=3.9", "rsa>=4.6"]
sadad = ["pycryptodome>=3.9"]

[project.urls]
Homepage = "https://github.com/mortexafarhadi/django-iranian-payment"
Repository = "https://github.com/mortexafarhadi/django-iranian-payment"

[tool.setuptools.packages.find]
include = ["django_iranian_payment*"]

[dependency-groups]
# ابزار توسعه/تست؛ در توزیع PyPI نمی‌رود.
# zeep / pycryptodome / rsa اینجا تکرار شده‌اند چون تست‌های ملت و ایران‌کیش
# به آن‌ها نیاز دارند (وگرنه آن تست‌ها skip می‌شوند و رمزنگاری/SOAP تست نمی‌شود).
dev = [
    "black>=26.5.1",
    "pytest>=8.3.5",
    "pytest-django>=4.12.0",
    "zeep>=4.3.2",
    "pycryptodome>=3.9",
    "rsa>=4.6",
]